@@ -23,6 +23,9 @@
 - Added equality, inclusion and difference between numerical sets and numerical semigroups and ideals of numerical semigroups
 - Convert numerical semigroups to numerical sets and ideals of numerical semigroups to numerical sets (if the minimum element is zero)
 - Union, intersection and sum of numerical sets
+- Position and Positions for numerical sets
+- Added IsAssociatedNumericalSetOfNumericalSemigroup
+- Added AsNumericalSemigroup for numerical sets 
 
 1.3.1 -> 1.4.0
 - Added NumericalSemigroupsWithFrobeniusNumberPC
